# growbe-cloud

./: .gitignore  README.md  SOFTWARE.md  package-lock.json  package.json  sonar-project.properties
cloud/: cloud-dev.docker-compose.yml  deploy.sh  nginx.conf  prod.docker-compose.override.yml  run.sh  stop.sh
dev-pc/: autossh-dev.service  install.sh
doc/: actionreponse.md  index.md  mqtt.md  ressource.md  security.md
docker/: README.md  broker-deployment.yaml  build.sh  cloud-dev.docker-compose.yml  conf-server-deployment.yaml  conf-server-service.yaml  deploy.sh  docker-compose.yml  fluentd.docker-compose.yml  frontend-dev-service.yaml  growbe-cloud-watcher-deployment.yaml  growbe-cloud-watcher-service.yaml  integration-test.docker-compose.yml  integration.docker-compose.yml  integration.sh  lightweight.docker-compose.yml  migration.sh  nms-service.yaml  pgsql-deployment.yaml  video-persistentvolumeclaim.yaml
growbe-cloud/: .dockerignore  .eslintrc.js  .gitignore  README.md  package-lock.json  package.json  spec.json  tsconfig.tsbuildinfo
growbe-cloud-api/: generate.sh
growbe-portal/: .gitignore  .vimspector  Dockerfile  README.md  angular.json  karma.conf.js  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tslint.json
growbe-proxy/: .gitignore  README.md  config.json  growbe-proxy.service  index.js  instal.sh  package-lock.json  package.json  test.json
helm/: Chart.yaml  README.md  deploy.sh  values.yaml
nms-impl/: .dockerignore  Dockerfile  index.js  package-lock.json  package.json
node/: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  Simple.json  imgui.ini  package.json
node/imgui/: CMakeLists.txt  imgui_impl_opengl3.cpp
node/imgui-node-editor/: CMakeLists.txt  imgui_canvas.h
node/node-editor/: CMakeLists.txt  main.cpp
proto/: alarm.options  alarm.proto  board.options  board.proto  env_controller.proto  message.options  message.proto  module.options  module.proto  network.proto  package-lock.json  package.json  sync.proto  version_cloud.h  virt.proto
releases/: growbe-cloud-1.2.10.md  growbe-cloud-1.2.4.md  growbe-cloud-1.2.5.md  growbe-cloud-1.2.6.md  growbe-cloud-1.2.7.md  growbe-cloud-1.2.9.md  growbe-mainboard-0.1.10.md  growbe-mainboard-0.1.7.md  (+1 more)
(+1089 files in other folders)
